:ambulance: Hotfix: Security 설정 변경
인증유무만 판단